# mlops_template

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  diagram.drawio  pyproject.toml  requirements.txt  tasks.py
.github/: dependabot.yaml
configs/: advance_config.yaml  (+5 more)
{{ cookiecutter.project_name }}/: Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
{{ cookiecutter.project_name }}/docs/: mkdocs.yaml  requirements_docs.txt
{{ cookiecutter.project_name }}/docs/source/: index.md
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: __init__.py  predict_model.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/models/: model.py
{{ cookiecutter.repo_name }}/: AGENTS_pip.md  AGENTS_uv.md  Makefile  README.md  README_pip.md  README_uv.md  docker-compose.yaml  pyproject.toml  pyproject_uv.toml  requirements.txt  requirements_dev.txt  tasks.py  tasks_uv.py
{{ cookiecutter.repo_name }}/.dev/: README.md
{{ cookiecutter.repo_name }}/.devcontainer/: devcontainer.json  post_create_pip.sh  post_create_uv.sh
{{ cookiecutter.repo_name }}/.github/: dependabot.yaml
{{ cookiecutter.repo_name }}/.github/agents/: dtu_mlops_agent.md
{{ cookiecutter.repo_name }}/.github/instructions/: add_test.instructions.md
{{ cookiecutter.repo_name }}/.github/workflows/: linting.yaml  linting_pip.yaml  linting_uv.yaml  pre-commit-update_uv.yaml  tests_pip.yaml  tests_uv.yaml
{{ cookiecutter.repo_name }}/configs/: config.yaml
{{ cookiecutter.repo_name }}/dockerfiles/: api.dockerfile  api_pip.dockerfile  api_uv.dockerfile  predict_model.dockerfile  train.dockerfile  train_model.dockerfile  train_pip.dockerfile  train_uv.dockerfile
{{ cookiecutter.repo_name }}/docs/: README.md  mkdocs.yaml
{{ cookiecutter.repo_name }}/docs/source/: index.md
{{ cookiecutter.repo_name }}/scripts/: README.md
{{ cookiecutter.repo_name }}/scripts/makefile_commands/: generate_help
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.project_name }}/: __init__.py  data.py  model.py  train.py
{{ cookiecutter.repo_name }}/tests/: test_data.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/: README.md
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/analysis/: README.md
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/inference/: README.md  predictor.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/models/: model.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/tools/: README.md  config.py  seeding.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/training/: README.md  trainer.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/ui/: README.md
(+18 files in other folders)
